# odc fault injection tools

add_subdirectory(omfc)
add_subdirectory(omia)
add_subdirectory(omieb)
add_subdirectory(omifs)
add_subdirectory(omlc)
add_subdirectory(omlpa)
add_subdirectory(omvae)
add_subdirectory(omvav)
add_subdirectory(omviv)
add_subdirectory(owaep)
add_subdirectory(owpfv)
add_subdirectory(owvav)
